<resources>
    <string name="facebook_app_id" translatable="false">1548843298607838</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1548843298607838</string>
    <string name="admob_application_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="app_name">Kallo</string>
    <string name="app_title">Kallo - Hausa Movies &amp; Series</string>
    <string name="app_version">1.0.0</string>
    <string name="contact_email">info@kallo.ng</string>
    <string name="copyright_text">Copyright @ Kallo \nAll right reserved</string>
    <string name="featured_tv_channels">Featured Tv Channel</string>
    <string name="latest_movie">Latest Movies</string>
    <string name="latest_tv_series">Latest Tv Series</string>
    <string name="more">More</string>
    <string name="movie">Movies</string>
    <string name="live_tv">Live TV</string>
    <string name="tv_series">Series</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="no_item_found">No item found</string>
    <string name="cast_n_crew">Cast and Crew</string>
    <string name="signin">Signin</string>
    <string name="reset">Reset Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="director">Director :</string>
    <string name="comments">Comments</string>
    <string name="your_comments">Your Comments</string>
    <string name="add_comments">Add Comments</string>
    <string name="no_internet">No internet connection !</string>
    <string name="copyright">Copyright</string>
    <string name="contact_us">Contact Us</string>
    <string name="fetch_error">Unable to fetch data</string>
    <string name="login_first">You need to login first</string>
    <string name="comment_empty">Comment can not empty</string>
    <string name="error_toast">Something went wrong ! try later</string>
    <string-array name="nav_item_name">
        <item>Home</item>
        <item>Movies</item>
        <item>Series</item>

        <item>Genre</item>

        <item>Profile</item>
        <item>Favorite</item>
        <item>Subscription</item>
        <item>Downloads</item>
        <item>Settings</item>
        <item>Sign Out</item>

    </string-array>
    <string-array name="nav_item_image">
        <item>outline_home_24</item>
        <item>outline_movie_24</item>
        <item>outline_local_movies_24</item>

        <item>outline_folder_24</item>

        <item>outline_person_24</item>
        <item>outline_favorite_border_24</item>
        <item>ic_subscriptions_black_24dp</item>
        <item>ic_file_download_black_24dp</item>
        <item>outline_settings_24</item>
        <item>outline_lock_24</item>
    </string-array>
    <string-array name="nav_item_name_2">
        <item>Home</item>
        <item>Movies</item>
        <item>Series</item>

        <item>Genre</item>

        <item>Login</item>
        <item>Settings</item>
    </string-array>
    <string-array name="nav_item_image_2">
        <item>outline_home_24</item>
        <item>outline_movie_24</item>
        <item>outline_local_movies_24</item>

        <item>outline_folder_24</item>

        <item>outline_lock_24</item>
        <item>outline_settings_24</item>
    </string-array>
    <string-array name="paypal_currency_list">
        <item>USD</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>GBP</item>
        <item>CAD</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>ILS</item>
        <item>JPY</item>
        <item>MXN</item>
        <item>TWD</item>
        <item>NZD</item>
        <item>NOK</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SGD</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>THB</item>
    </string-array>
    <string name="year_range_start">1900</string>
    <string name="year_range_end">2020</string>
    <string name="title_activity_item_show">ItemShowActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="program_guide">Program Guide</string>
    <string name="live">Live</string>
    <string name="watching_on">Watching live on</string>
    <string name="all_tv_channel">All TV Channels</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tv_channels">Tv Channels</string>
    <string name="watching_catch_up_tv">Watching Catch-up TV</string>
    <string name="deactive_account_text">If you do not want to use this account you can de-active easily.</string>
    <string name="reason_to_deactivate_account">Reason to deactivate account</string>
    <string name="enter_password">Enter Password</string>
    <string name="no_data_found">No data found.</string>
    <string name="wallet">Wallet</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="all_tv_series">All TV Series</string>
    <string name="unlimited_movies">Unlimited Movies</string>
</resources>