<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ctx=".PurchasePlanActivity">


    <TextView
        app:fontFamily="@font/sharp"
        android:id="@+id/no_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_found"
        android:textSize="18sp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_centerInParent="true"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="15dp"
                    android:src="@drawable/kallo" />

                <ImageView
                    android:id="@+id/close_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="15dp"
                    android:src="@drawable/ic_close_black_24dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginEnd="30dp"
                android:text="Access extra feature with premium subscription -"
                android:textSize="18sp"
                app:fontFamily="@font/sharp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_check_circle_blue"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/unlimited_movies"
                    android:textSize="16sp"
                    app:fontFamily="@font/sharp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:drawableLeft="@drawable/ic_check_circle_blue"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/all_tv_series"
                    android:textSize="16sp"
                    app:fontFamily="@font/sharp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:drawableLeft="@drawable/ic_check_circle_blue"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="@string/tv_channels"
                    android:textSize="16sp"
                    app:fontFamily="@font/sharp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:drawableLeft="@drawable/ic_check_circle_blue"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="Music"
                    android:textSize="16sp"
                    app:fontFamily="@font/sharp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:drawableLeft="@drawable/ic_check_circle_blue"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="Documentaries"
                    android:textSize="16sp"
                    app:fontFamily="@font/sharp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pacakge_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/layout_package_item_2" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>