<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




    <LinearLayout
        android:id="@+id/search_root_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            android:id="@+id/search_bar"
            layout="@layout/toolbar" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_root_layout"
        android:layout_above="@id/adView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <LinearLayout
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <ImageView
                        android:paddingTop="20dp"
                        android:layout_width="120dp"
                        android:layout_height="114dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_wallet"
                        android:paddingBottom="30dp"
                        />

                    <TextView
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="10dp"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wallet"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>



                    <TextView
                        android:id="@+id/wallet_balance"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="10dp"
                        android:textSize="22sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="********"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>


                    <Button
                        android:id="@+id/fund_wallet"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/fund_wallet"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/item_progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:visibility="gone" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adView"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_alignParentBottom="true"
                android:src="@drawable/bg_no_item_city" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_noitem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/no_item_found"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_60" />
            </LinearLayout>

        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>